--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@prisma/client": "^4.11.0",
+    "bcrypt": "^5.1.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.2.4",
     "prisma": "^4.11.0",
     "react": "18.2.0",
