--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prisma": "^4.11.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^2.1.1"
   }
 }
