Re-factor: install tyepscript

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=randompassword
-POSTGRES_DB=patreon_clone
-DATABASE_URL="postgresql://postgres:randompassword@localhost:5432/patreon_clone?schema=public"
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=next_app
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/next_app?schema=public"
