--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@prisma/client": "^4.11.0",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.32",
+    "@types/react-dom": "^18.0.11",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.3",
     "eslint": "8.36.0",
@@ -24,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-notifications": "^1.7.4",
     "superjson": "^1.12.2",
-    "swr": "^2.1.1"
+    "swr": "^2.1.1",
+    "typescript": "^5.0.3"
   }
 }
