--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.0.11",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.3",
+    "cookies-next": "^2.1.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "express": "^4.18.2",
